started woking on contact screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -66,6 +66,10 @@ flutter:
     - assets/7.jpg
     - assets/8.jpg
     - assets/9.jpg
+    - assets/11.png
+    - assets/12.png
+    - assets/13.png
+    - assets/14.png
 
 
 
