--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,8 @@ dependencies:
   visibility_detector: ^0.2.0
   video_player_web: ^2.0.3
   flutter_staggered_animations: ^1.0.0
+  http: ^0.13.3
+  url_launcher: ^6.0.10
   
  
  
