--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   flutter_staggered_animations: ^1.0.0
   http: ^0.13.3
   url_launcher: ^6.0.10
+  url_strategy: ^0.2.0
   
  
  
@@ -73,6 +74,10 @@ flutter:
     - assets/13.png
     - assets/14.png
     - assets/15.png
+    - assets/blog-1.jpg
+    - assets/blog-2.jpg
+    - assets/blog-3.jpg
+    - assets/blog-4.jpg
 
 
 
