before adding second splash

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,11 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_native_splash: ^1.2.3
+flutter_native_splash:
+  color: "#ffffff"   
+  image: assets/bazi.png
+  web: true 
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -79,6 +84,7 @@ flutter:
     - assets/blog-2.jpg
     - assets/blog-3.jpg
     - assets/blog-4.jpg
+   
 
 
 
