--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,13 +32,17 @@ dependencies:
   scroll_to_index: ^2.0.0
   visibility_detector: ^0.2.0
   video_player_web: ^2.0.3
-  flutter_staggered_animations: ^1.0.0
   http: ^0.13.3
   url_launcher: ^6.0.10
   url_strategy: ^0.2.0
   provider: ^6.0.0
-  
- 
+  splash_screen_view: ^3.0.0
+
+
+splash_screen_view:  
+  color: "#ffffff"
+  web: true
+
  
 
 dev_dependencies:
@@ -84,6 +88,7 @@ flutter:
     - assets/blog-2.jpg
     - assets/blog-3.jpg
     - assets/blog-4.jpg
+    - assets/bazi.png
    
 
 
