--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ splash_screen_view:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  flutter_lints: ^1.0.0  
   flutter_native_splash: ^1.2.3
 flutter_native_splash:
   color: "#ffffff"   
